@media (max-width: 767px) {     .navbar-fixed-top {         position: relative;         top: auto;     }     .navbar-collapse {         max-height: none;     }     body {         margin: 0;     } } Update#

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </nav>
     <!-- scrollup -->
     <button id="btnScrollToTop">
-        <a href="#nav"><i class="fas fa-arrow-up"></i></a>
+        <a href="#Home"><i class="fas fa-arrow-up"></i></a>
         
     </button>
 
