--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <li><a href="#Home">Home</a></li>
             <li><a href="#About">About</a></li>
             <li><a href="#Education">Education</a></li>
-            <li><a href="#Services">Services</a></li>
+            <li><a href="#Projects">Projects</a></li>
             <li><a href="#Contact">Contact</a></li>
         </ul>
     </nav>
@@ -182,57 +182,34 @@
             </div>
         </section>
 
-        <!-- Services  -->
+        <!-- Projects  -->
+        <div id="slideshow">
+            <h1 class="heading" id="Projects">My Projects</h1>
+            <div class="slide-wrapper">
 
-        <section class="services" id="Services">
-            <h1 class="heading">my <span>services</span></h1>
 
-            <div class="box-container">
-                <div class="box">
-                    <i class="fab fa-html5"></i>
-                    <h2>HTML</h2>
-                    <p>documents designed to be displayed in a web browser.</p>
+                <div class="slide">
+                    <h1 class="slide-number">
+                        <a href="https://tiaspg.tecnia.in/13th-techno-vision/"> <img src="tecnia.PNG" alt=""></a>
+                    </h1>
                 </div>
-
-                <div class="box">
-                    <i class="fab fa-css3"></i>
-                    <h2>CSS</h2>
-                    <p>
-                        the presentation of a document written in a markup language such as HTML or XML.
-                    </p>
+                <div class="slide">
+                    <h1 class="slide-number">
+                        <a href="https://tiaspg.tecnia.in/13th-techno-vision/"> <img src="tecnia2.PNG" alt=""></a>
+                    </h1>
                 </div>
-
-                <div class="box">
-                    <i class="fab fa-js"></i>
-                    <h2>JAVASCRIPT</h2>
-                    <p>
-                        core technologies of the World Wide Web, alongside HTML and CSS.
-                    </p>
+                <div class="slide">
+                    <h1 class="slide-number">
+                        <a href="https://www.instagram.com/scribleillustrator/"><img src="Krishan ji-01.jpg" alt=""></a>
+                    </h1>
                 </div>
-
-                <div class="box">
-                    <i class="fa fa-laptop-code"></i>
-                    <h2>Front End WebDevelopment</h2>
-                    <p>refers to the user experience aspects of website development.</p>
-                </div>
-
-                <div class="box">
-                    <i class="fa fa-palette"></i>
-                    <h2>Illustration</h2>
-                    <p>
-                        an illustration creation, graphic design and Digital Art creation software developed by Adobe.
-                    </p>
-                </div>
-
-                <div class="box">
-                    <i class="fa fa-code"></i>
-                    <h2>Coding Languages</h2>
-                    <p>
-                        process of transforming ideas, solutions, and instructions the binary-machine code.
-                    </p>
+                <div class="slide">
+                    <h1 class="slide-number">
+                        <a href="https://www.instagram.com/scribleillustrator/"><img src="Pasoori-01.jpg" alt=""></a>
+                    </h1>
                 </div>
             </div>
-        </section>
+        </div>
 
         <!-- Contact Us -->
         <section class="contact" id="Contact">
